ingress-test/default-backend.yml
apiVersion: v1
kind: Pod
metadata:
  name: mcu-landing
  labels:
    app: mcu-landing
spec:
  containers:
  - name: mcu-landing-ctr
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: html-content
      mountPath: /usr/share/nginx/html
  volumes:
  - name: html-content
    configMap:
      name: mcu-landing-html
---
apiVersion: v1
kind: Service
metadata:
  name: svc-mcu-landing
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: mcu-landing
